isl-transform/src/main/java/com/intuit/isl/ant4/IslParser.java
// Generated from ..\ant4\IslParser.g4 by ANTLR 4.9.1
package com.intuit.isl.ant4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IFCODE=1, ELSE=2, ENDIFCODE=3, SWITCH=4, ARROW=5, ENDSWITCH=6, FILTER=7, 
		MAP=8, EQUAL_EQUAL=9, NOT_EQUAL=10, LESS_OR_EQUAL=11, GREATER_OR_EQUAL=12, 
		GREATER=13, LESS=14, CONTAINS=15, NOT_CONTAINS=16, STARTS_WITH=17, NOT_STARTS_WITH=18, 
		ENDS_WITH=19, NOT_ENDS_WITH=20, IN=21, NOT_IN=22, IS=23, NOT_IS=24, MATCHES=25, 
		NOT_MATCHES=26, PARALLEL=27, FOR=28, ENDFOR=29, WHILELOOP=30, ENDWHILELOOP=31, 
		FUN=32, MODIFIER_FUN=33, RETURN=34, CACHE=35, IMPORT=36, DECLARETYPE=37, 
		AS=38, FROM=39, OPEN_BACKTICK=40, LOP=41, BANG=42, COLON=43, EQUAL=44, 
		SEMICOLON=45, MODIFIER=46, COMMA=47, DOLLAR=48, BACKSLASH=49, AT=50, SPREAD=51, 
		DOT=52, COALESCE=53, OPAREN=54, CPAREN=55, ARRAYCONDOPEN=56, ARRAYCONDCLOSE=57, 
		SQUAREOPEN=58, SQUARECLOSE=59, CURLYOPEN=60, CURLYCLOSE=61, CURLYOPENOPEN=62, 
		CURLYCLOSECLOSE=63, MATH_TIMES=64, MATH_DIV=65, MATH_PLUS=66, MATH_MINUS=67, 
		BOOL=68, NUM=69, ID=70, QUOTEDSTRING=71, COMMENT=72, COMMENT2=73, WS=74, 
		UNKNOWN=75, ENTER_EXPR_INTERP=76, ENTER_MATH_INTERP=77, ENTER_FUNC_INTERP=78, 
		ID_INTERP=79, TEXT=80, RECOVERTOKENS_INTERP=81, CLOSE_BACKTICK=82;
	public static final int
		RULE_spec = 0, RULE_importDeclaration = 1, RULE_annotationParameter = 2, 
		RULE_annotationArguments = 3, RULE_annotation = 4, RULE_functionDeclaration = 5, 
		RULE_functionArguments = 6, RULE_variableWithType = 7, RULE_returnCall = 8, 
		RULE_functionStatements = 9, RULE_functionStatement = 10, RULE_statements = 11, 
		RULE_statement = 12, RULE_relop = 13, RULE_ifStatement = 14, RULE_elseClause = 15, 
		RULE_inlineIf = 16, RULE_inlineElse = 17, RULE_switchCaseStatement = 18, 
		RULE_switchCaseCondition = 19, RULE_switchCaseElseCondition = 20, RULE_regexrelop = 21, 
		RULE_condition = 22, RULE_simpleCondition = 23, RULE_conditionExpression = 24, 
		RULE_assignmentValue = 25, RULE_assignmentValueItem = 26, RULE_variableConditionPart = 27, 
		RULE_variableIndexPart = 28, RULE_variableTextPropertyPart = 29, RULE_assignSelector = 30, 
		RULE_assignProperty = 31, RULE_assignVariableProperty = 32, RULE_variableSelectorStart = 33, 
		RULE_variableSelectorPart = 34, RULE_variableSelector = 35, RULE_assignTextProperty = 36, 
		RULE_spreadSelector = 37, RULE_declareObjectStatement = 38, RULE_declareObject = 39, 
		RULE_variableOrObject = 40, RULE_forEach = 41, RULE_whileLoop = 42, RULE_functionCall = 43, 
		RULE_rhsval = 44, RULE_rhsid = 45, RULE_keyword = 46, RULE_shortIdentifier = 47, 
		RULE_multiIdent = 48, RULE_variableDeclaration = 49, RULE_typeDefinition = 50, 
		RULE_objectTypeDefinition = 51, RULE_declareObjectTypeProperty = 52, RULE_arrayTypeDefinition = 53, 
		RULE_enumTypeDefinition = 54, RULE_typeDeclaration = 55, RULE_typeNameDeclaration = 56, 
		RULE_filterModifier = 57, RULE_conditionModifier = 58, RULE_mapModifier = 59, 
		RULE_genericConditionModifier = 60, RULE_modifier = 61, RULE_variableWithModifier = 62, 
		RULE_argumentValue = 63, RULE_argumentItem = 64, RULE_arguments = 65, 
		RULE_rightSideValue = 66, RULE_arrayArgument = 67, RULE_array = 68, RULE_expressionInterpolate = 69, 
		RULE_mathInterpolate = 70, RULE_funcCallInterpolate = 71, RULE_simpleInterpolateVariable = 72, 
		RULE_interpolateText = 73, RULE_interpolate = 74, RULE_literal = 75, RULE_regexString = 76, 
		RULE_math = 77, RULE_mathExpresion = 78, RULE_mathValue = 79;
	private static String[] makeRuleNames() {
		return new String[] {
			"spec", "importDeclaration", "annotationParameter", "annotationArguments", 
			"annotation", "functionDeclaration", "functionArguments", "variableWithType", 
			"returnCall", "functionStatements", "functionStatement", "statements", 
			"statement", "relop", "ifStatement", "elseClause", "inlineIf", "inlineElse", 
			"switchCaseStatement", "switchCaseCondition", "switchCaseElseCondition", 
			"regexrelop", "condition", "simpleCondition", "conditionExpression", 
			"assignmentValue", "assignmentValueItem", "variableConditionPart", "variableIndexPart", 
			"variableTextPropertyPart", "assignSelector", "assignProperty", "assignVariableProperty", 
			"variableSelectorStart", "variableSelectorPart", "variableSelector", 
			"assignTextProperty", "spreadSelector", "declareObjectStatement", "declareObject", 
			"variableOrObject", "forEach", "whileLoop", "functionCall", "rhsval", 
			"rhsid", "keyword", "shortIdentifier", "multiIdent", "variableDeclaration", 
			"typeDefinition", "objectTypeDefinition", "declareObjectTypeProperty", 
			"arrayTypeDefinition", "enumTypeDefinition", "typeDeclaration", "typeNameDeclaration", 
			"filterModifier", "conditionModifier", "mapModifier", "genericConditionModifier", 
			"modifier", "variableWithModifier", "argumentValue", "argumentItem", 
			"arguments", "rightSideValue", "arrayArgument", "array", "expressionInterpolate", 
			"mathInterpolate", "funcCallInterpolate", "simpleInterpolateVariable", 
			"interpolateText", "interpolate", "literal", "regexString", "math", "mathExpresion", 
			"mathValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'endif'", "'switch'", "'->'", "'endswitch'", 
			"'filter'", "'map'", "'=='", "'!='", "'<='", "'>='", "'>'", "'<'", "'contains'", 
			"'!contains'", "'startsWith'", "'!startsWith'", "'endsWith'", "'!endsWith'", 
			"'in'", "'!in'", "'is'", "'!is'", "'matches'", "'!matches'", "'parallel'", 
			"'foreach'", "'endfor'", "'while'", "'endwhile'", "'fun'", "'modifier'", 
			"'return'", "'cache'", "'import'", "'type'", "'as'", "'from'", null, 
			null, "'!'", "':'", "'='", "';'", "'|'", "','", "'$'", "'\\'", "'@'", 
			"'...'", "'.'", "'??'", "'('", "')'", "'[('", "')]'", "'['", "']'", "'{'", 
			"'}'", null, "'}}'", "'*'", "'/'", "'+'", "'-'", null, null, null, null, 
			null, null, null, null, "'${'", null, "'@.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IFCODE", "ELSE", "ENDIFCODE", "SWITCH", "ARROW", "ENDSWITCH", 
			"FILTER", "MAP", "EQUAL_EQUAL", "NOT_EQUAL", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", 
			"GREATER", "LESS", "CONTAINS", "NOT_CONTAINS", "STARTS_WITH", "NOT_STARTS_WITH", 
			"ENDS_WITH", "NOT_ENDS_WITH", "IN", "NOT_IN", "IS", "NOT_IS", "MATCHES", 
			"NOT_MATCHES", "PARALLEL", "FOR", "ENDFOR", "WHILELOOP", "ENDWHILELOOP", 
			"FUN", "MODIFIER_FUN", "RETURN", "CACHE", "IMPORT", "DECLARETYPE", "AS", 
			"FROM", "OPEN_BACKTICK", "LOP", "BANG", "COLON", "EQUAL", "SEMICOLON", 
			"MODIFIER", "COMMA", "DOLLAR", "BACKSLASH", "AT", "SPREAD", "DOT", "COALESCE", 
			"OPAREN", "CPAREN", "ARRAYCONDOPEN", "ARRAYCONDCLOSE", "SQUAREOPEN", 
			"SQUARECLOSE", "CURLYOPEN", "CURLYCLOSE", "CURLYOPENOPEN", "CURLYCLOSECLOSE", 
			"MATH_TIMES", "MATH_DIV", "MATH_PLUS", "MATH_MINUS", "BOOL", "NUM", "ID", 
			"QUOTEDSTRING", "COMMENT", "COMMENT2", "WS", "UNKNOWN", "ENTER_EXPR_INTERP", 
			"ENTER_MATH_INTERP", "ENTER_FUNC_INTERP", "ID_INTERP", "TEXT", "RECOVERTOKENS_INTERP", 
			"CLOSE_BACKTICK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IslParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IslParser.EOF, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IslParserVisitor ) return ((IslParserVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				{
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(160);
					importDeclaration();
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DECLARETYPE) {
					{
					{
					setState(166);
					typeDeclaration();
					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << MODIFIER_FUN) | (1L << CACHE) | (1L << AT))) != 0)) {
					{
					{
					setState(172);
					functionDeclaration();
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case 2:
				{
				setState(178);
				statements();
				}
				break;
			}
			setState(181);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(IslParser.IMPORT, 0); }
		public TerminalNode ID() { return getToken(IslParser.ID, 0); }
		public TerminalNode FROM() { return getToken(IslParser.FROM, 0); }
		public TerminalNode QUOTEDSTRING() { return getToken(IslParser.QUOTEDSTRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(IslParser.SEMICOLON, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IslParserVisitor ) return ((IslParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(IMPORT);
			setState(184);
			match(ID);
			setState(185);
			match(FROM);
			setState(186);
			match(QUOTEDSTRING);
			setState(187);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationParameterContext extends ParserRuleContext {
		public DeclareObjectContext declareObject() {
			return getRuleContext(DeclareObjectContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public AnnotationParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).enterAnnotationParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).exitAnnotationParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IslParserVisitor ) return ((IslParserVisitor<? extends T>)visitor).visitAnnotationParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationParameterContext annotationParameter() throws RecognitionException {
		AnnotationParameterContext _localctx = new AnnotationParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_annotationParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CURLYOPEN:
				{
				setState(189);
				declareObject();
				}
				break;
			case BOOL:
			case NUM:
			case QUOTEDSTRING:
				{
				setState(190);
				literal();
				}
				break;
			case SQUAREOPEN:
				{
				setState(191);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationArgumentsContext extends ParserRuleContext {
		public TerminalNode OPAREN() { return getToken(IslParser.OPAREN, 0); }
		public TerminalNode CPAREN() { return getToken(IslParser.CPAREN, 0); }
		public List<AnnotationParameterContext> annotationParameter() {
			return getRuleContexts(AnnotationParameterContext.class);
		}
		public AnnotationParameterContext annotationParameter(int i) {
			return getRuleContext(AnnotationParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(IslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IslParser.COMMA, i);
		}
		public AnnotationArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationArguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).enterAnnotationArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).exitAnnotationArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IslParserVisitor ) return ((IslParserVisitor<? extends T>)visitor).visitAnnotationArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationArgumentsContext annotationArguments() throws RecognitionException {
		AnnotationArgumentsContext _localctx = new AnnotationArgumentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_annotationArguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(OPAREN);
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 58)) & ~0x3f) == 0 && ((1L << (_la - 58)) & ((1L << (SQUAREOPEN - 58)) | (1L << (CURLYOPEN - 58)) | (1L << (BOOL - 58)) | (1L << (NUM - 58)) | (1L << (QUOTEDSTRING - 58)))) != 0)) {
				{
				setState(195);
				annotationParameter();
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(196);
					match(COMMA);
					setState(197);
					annotationParameter();
					}
					}
					setState(202);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(205);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(IslParser.AT, 0); }
		public TerminalNode ID() { return getToken(IslParser.ID, 0); }
		public AnnotationArgumentsContext annotationArguments() {
			return getRuleContext(AnnotationArgumentsContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IslParserListener ) ((IslParserListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IslParserVisitor ) return ((IslParserVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(AT);
			setState(208);
			match(ID);
			setState(210);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPAREN) {
				{
				setState(209);
				annotationArguments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
